--- a/html-chatbot/index.html
+++ b/html-chatbot/index.html
@@ -27,6 +27,10 @@
 	<link rel="stylesheet" href="/Y2UKyN5_ICz7il40" />
 </head>
 
+
+</head>
+
+
 <body>
 
 	<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
@@ -34,14 +38,18 @@
 	<!-- Navbar -->
 	<div class="topnav" id="myTopnav">
 		<div class="max-width">
-			<img src="./img/Logo.JPEG" alt="Logo"
-				style="width: 7%; height: 7%; padding-bottom: 25px; padding-top: 25px; float: left;"></a>
-			<a href="#head">Home</a>
-			<a href="#about">vorteile&nbsp;</a>
-			<a href="#gamemodes">Chatbots&nbsp;</a>
-			<a href="#vote">info&nbsp;</a>
-			<a href="#staff">FAQ&nbsp;</a>
-			<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+
+		      <img src="./img/Logo.JPEG" alt="Logo" style="width: 7%; height: 7%; padding-bottom: 25px; padding-top: 25px; float: left;"></a> 
+			  <a href="#head">Home</a>
+			  <a href="#about">vorteile&nbsp;</a>
+			  <a href="#gamemodes">Chatbots&nbsp;</a>
+			  <a href="#vote">info&nbsp;</a>
+			  <a href="#staff">FAQ&nbsp;</a>
+		      <a href="#Login">LOGIN&nbsp;</a>
+		  	  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+
+			
+
 		</div>
 	</div>
 	<!-- End Navbar -->
@@ -249,8 +257,9 @@
 		</div>
 
 		<!-- Note -->
-		<p>Unser innovativer Chatbot ist jederzeit für Sie da – 24/7, ohne Unterbrechung, um all Ihre Fragen zu
-			beantworten.</p>
+
+		<p>&nbsp;</p>
+
 	</section>
 	<!-- End Vote Section -->
 
@@ -330,7 +339,36 @@
 	</section>
 	<!-- End Staff Section -->
 
-	<!-- Footer -->
+	<!-- Vote Section -->
+	<section id="Login">
+		<h1>LOGIN BEREICH&nbsp;</h1>
+		<p>CHATBOTS</p>
+		<hr>
+	  <div class="row Loginlist">
+			<!-- First Vote Link -->
+	    <div class="col-md Loginblock">
+				<img class="res-img-sm" src="./img/Google.PNG">
+				<h2><a href="https://google.com/" target="_blank">CLICK TO LOGIN</a></h2>
+			
+				<a href="#">&nbsp;</a>
+		  </div>
+		  <!-- End First Vote Link -->
+
+		  <!-- Second Vote Link -->
+		  
+	    <!-- End Second Vote Link -->
+
+		  <!-- Third Vote Link -->
+			
+		  <!-- End Third Vote Link -->
+		</div>
+
+		<!-- Note -->
+		<p>Unser innovativer Chatbot ist jederzeit für Sie da – 24/7, ohne Unterbrechung, um all Ihre Fragen zu beantworten.</p>
+	</section>
+	<!-- End Vote Section -->
+	
+<!-- Footer -->
 	<footer>
 		<div class="footer">
 			<div class="copyright-notice">
